Restructure JS file. Click event added.

--- a/01-JS-music-kit/index.html
+++ b/01-JS-music-kit/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JS-music-kit</title>
 	<link rel="stylesheet" href="css/layout.css">
 	 <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet"> 
@@ -9,6 +10,7 @@
 </head>
 <body>
 	<div class="layout">
+	
 		<div data-key="65" class="key">
 			<kbd>a</kbd>
 			<span class="sound">clap</span>
@@ -55,7 +57,7 @@
 	<audio src="sounds/ride.wav" data-key="72"></audio>
 	<audio src="sounds/snare.wav" data-key="74"></audio>
 	<audio src="sounds/tom.wav" data-key="75"></audio>
-	<audio src="sounds/tink.wav" data-key="76"></audio>
+	<audio src="sounds/tom.wav" data-key="76"></audio>
 	<script src="play.js"></script>
 </body>
 </html>
