--- a/02-CSS-JS-clock/index.html
+++ b/02-CSS-JS-clock/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>CSS-JS-clock</title>
 	<link rel="stylesheet" href="css/layout.css">
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Hammersmith+One" rel="stylesheet"> 
 
 </head>
 <body>
