added CSS vars & JS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet"> 
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	
 </head>
 <body>
 	<h1><span>#</span> JavaScript <span>30</span> Days Coding Challenge</h1>
@@ -31,7 +31,7 @@
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 			</div>
 			<div class="column">
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="03-CSS-variables/index.html" target="_blank" class="page__link"><img src="img/03-perview.png" alt="" class="page__perview"><div class="page__descr">CSS variables and JS</div></a></div> 
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
