--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  <div class="row"> 
 			<div class="column">
 				<div class="page"><a href="01-JS-music-kit/index.html" target="_blank" class="page__link"><img src="img/01-perview.png" alt="" class="page__perview"> <div class="page__descr">JS Music Kit</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="06-Type-Ahead/index.html" target="_blank" class="page__link"><img src="img/06-perview.png" alt="" class="page__perview"> <div class="page__descr">Type Ahead</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
