--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="column">
 				<div class="page"><a href="02-CSS-JS-clock/index.html" target="_blank" class="page__link"><img src="img/02-perview.png" alt="" class="page__perview"><div class="page__descr">CSS-JS Clock</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="07-Array-Cardio-2/index.html" target="_blank" class="page__link"><img src="img/07-perview.png" alt="" class="page__perview"> <div class="page__descr">Array Cardio Day 2</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
