--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			<div class="column">
 				<div class="page"><a href="03-CSS-variables/index.html" target="_blank" class="page__link"><img src="img/03-perview.png" alt="" class="page__perview"><div class="page__descr">CSS variables and JS</div></a></div> 
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="08-Fun-HTML5-Canvas/index.html" target="_blank" class="page__link"><img src="img/08-perview.png" alt="" class="page__perview"> <div class="page__descr">Fun HTML5 Canvas</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
