slide in on scroll added

--- a/12-Key-Detection/index.html
+++ b/12-Key-Detection/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <main class="content">
-  <h1>Enter on your keybord
+<h1>Enter on your keybord
     <span class="key" data-key="d">D</span>
     <span class="key" data-key="i">i</span>
     <span class="key" data-key="m">m</span>
     <span class="key" data-key="a">a</span>
    
 </h1>
-  <img src="https://media.giphy.com/media/qDPg6HNz2NfAk/giphy.gif"></img>
+  <img src="https://media.giphy.com/media/qDPg6HNz2NfAk/giphy.gif" class="try show"></img>
 <!-- https://media.giphy.com/media/yxfjKKp1bzLrq9QzZ0/giphy.gif -->
 <div class = "congrats">
 <img src="https://media.giphy.com/media/yxfjKKp1bzLrq9QzZ0/giphy.gif "></img>
