--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="column">
 				<div class="page"><a href="02-CSS-JS-clock/index.html" target="_blank" class="page__link"><img src="img/02-perview.png" alt="" class="page__perview"><div class="page__descr">CSS-JS Clock</div></a></div>
 				<div class="page"><a href="07-Array-Cardio-2/index.html" target="_blank" class="page__link"><img src="img/07-perview.png" alt="" class="page__perview"> <div class="page__descr">Array Cardio Day 2</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="12-Key-Detection/index.html" target="_blank" class="page__link"><img src="img/12-perview.png" alt="" class="page__perview"> <div class="page__descr">Key Detection</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
@@ -34,7 +34,7 @@
 			<div class="column">
 				<div class="page"><a href="03-CSS-variables/index.html" target="_blank" class="page__link"><img src="img/03-perview.png" alt="" class="page__perview"><div class="page__descr">CSS variables and JS</div></a></div> 
 				<div class="page"><a href="08-Fun-HTML5-Canvas/index.html" target="_blank" class="page__link"><img src="img/08-perview.png" alt="" class="page__perview"> <div class="page__descr">Fun HTML5 Canvas</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="13-Slide-in-on-Scroll/index.html" target="_blank" class="page__link"><img src="img/13-perview.png" alt="" class="page__perview"> <div class="page__descr">Slide in on Scroll</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
