add event delegation challenge

--- a/15-Local-Storage-Event-Delegation/index.html
+++ b/15-Local-Storage-Event-Delegation/index.html
@@ -23,14 +23,14 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <div class="control">
+    <button class = "conrol__button" id="clear"><img src="img/clear.png"/> Clear</button>
+    <button class = "conrol__button" id="select"><img src="img/select.png"/> Select all</button>
+    <button class = "conrol__button" id="unselect"><img src="img/deselect.png"/> Deselect all</button>
+  </div>
   </div>
 
-<script>
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
-  const items = [];
-
-</script>
+<script src="script.js"></script>
 
 
 </body>
