--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="column">
 				<div class="page"><a href="05-Flex-Panel-Image-Gallery/index.html" target="_blank" class="page__link"><img src="img/05-perview.png" alt="" class="page__perview"><div class="page__descr">Flex Panel Image Gallery</div></a></div>
 				<div class="page"><a href="10-Multiple-Checkboxes/index.html" target="_blank" class="page__link"><img src="img/10-perview.png" alt="" class="page__perview"> <div class="page__descr">Multiple-Checkboxes</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="15-Local-Storage-Event-Delegation/index.html" target="_blank" class="page__link"><img src="img/15-perview.png" alt="" class="page__perview"> <div class="page__descr">Local Storage Event Delegation</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
