--- a/09-Must-Known-Dev-Tricks/index.html
+++ b/09-Must-Known-Dev-Tricks/index.html
@@ -3,15 +3,273 @@
 <head>
   <meta charset="UTF-8">
   <title>Console Tricks!</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+<h1>Must known Dev tricks!</h1>
+  
+  <svg
+  class="hero-image"
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   width="400px"
+   height="600px"
+   viewBox="0 0 300 300"
+   preserveAspectRatio = "xMinYMid slice"
+   version="1.1"
+   id="svg8"
+   inkscape:version="0.92.4 (unknown)"
+   sodipodi:docname="rick.svg">
+  <defs
+     id="defs2" />
+  <sodipodi:namedview
+     id="base"
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1.0"
+     inkscape:pageopacity="0.0"
+     inkscape:pageshadow="2"
+     inkscape:zoom="0.28697622"
+     inkscape:cx="-467.90296"
+     inkscape:cy="316.22437"
+     inkscape:document-units="mm"
+     inkscape:current-layer="layer1"
+     showgrid="false"
+     fit-margin-top="0"
+     fit-margin-left="0"
+     fit-margin-right="0"
+     fit-margin-bottom="0"
+     inkscape:window-width="1920"
+     inkscape:window-height="1031"
+     inkscape:window-x="0"
+     inkscape:window-y="25"
+     inkscape:window-maximized="1" />
+  <metadata
+     id="metadata5">
+    <rdf:RDF>
+      <cc:Work
+         rdf:about="">
+        <dc:format>image/svg+xml</dc:format>
+        <dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+        <dc:title></dc:title>
+      </cc:Work>
+    </rdf:RDF>
+  </metadata>
+  <g
+     inkscape:label="Layer 1"
+     inkscape:groupmode="layer"
+     id="layer1"
+     transform="translate(-34.75374,29.442911)">
+    <g
+       id="g1076">
+      <path
+         inkscape:connector-curvature="0"
+         id="path908"
+         d="m 138.02161,178.41221 0.46099,8.75871 -1.84394,10.14167 34.57386,-2.30492 -3.68788,-20.28333 z"
+         style="fill:#fffaf4;fill-opacity:1;stroke:#000000;stroke-width:0.66500002;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="cscccccsc"
+         inkscape:connector-curvature="0"
+         id="path880"
+         d="m 138.30812,188.52779 c 0,0 -13.06641,4.82006 -19.20919,8.0571 -6.51189,3.43155 -18.55726,11.96869 -18.55726,11.96869 L 83.910714,297.75597 H 222.25 l -16.63095,-93.73812 -35.93723,-16.18706 c 0,0 -9.5105,5.91427 -15.46754,6.3597 -6.9137,0.51696 -15.90616,-5.6627 -15.90616,-5.6627 z"
+         style="fill:none;stroke:#000000;stroke-width:0.66500002;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="ccc"
+         inkscape:connector-curvature="0"
+         id="path886"
+         d="m 113.05652,254.01317 -5.82493,43.96473 -23.320876,-0.22193"
+         style="fill:none;stroke:#000000;stroke-width:0.96499997;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="cscccccczc"
+         inkscape:connector-curvature="0"
+         id="path882"
+         d="m 138.30812,188.52779 c 0.53897,-1.88641 -8.4323,7.85034 -13.5326,19.22982 -4.6325,10.33574 -15.16243,42.37336 -15.16243,42.37336 l 9.82738,7.9375 8.68651,5.98171 -20.02579,19.34267 L 114.90476,297 h 17.106 c 0,0 0.55093,-12.8484 2.25227,-54.2361 1.70135,-41.38771 4.04509,-54.23611 4.04509,-54.23611 z"
+         style="fill:#fefefe;fill-opacity:1;stroke:#000000;stroke-width:0.96499997;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         inkscape:connector-curvature="0"
+         id="path888"
+         d="m 194.11243,253.80958 6.51931,43.84235"
+         style="fill:none;stroke:#000000;stroke-width:0;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="ccccccsc"
+         inkscape:connector-curvature="0"
+         id="path884"
+         d="m 169.68182,188.35996 5.69913,109.16921 h 19.65476 l 5.29167,-15.11903 -20.18877,-17.32797 19.43281,-15.178 c 0,0 -7.97223,-21.28441 -12.50006,-31.75001 -4.43774,-10.25736 -11.75236,-29.7942 -17.38954,-29.7942 z"
+         style="fill:#fefefe;fill-opacity:1;stroke:#000000;stroke-width:0.76499999;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         transform="matrix(0.26458333,0,0,0.26458333,0,-123)"
+         inkscape:connector-curvature="0"
+         id="path906"
+         d="m 501.31756,1588.0049 c 0,-2.8137 8.77693,-211.7916 9.8675,-234.9444 3.28704,-69.7835 9.39246,-148.7561 13.0627,-168.9637 l 0.70404,-3.8764 8.20281,4.7087 c 4.51154,2.5897 12.38883,6.3634 17.5051,8.386 25.45483,10.0627 40.91478,8.4099 73.36259,-7.843 l 15.08009,-7.5535 0.77341,11.1872 c 1.2531,18.1261 20.36917,388.1502 20.36917,394.28 v 5.6018 h -79.46371 c -43.70503,0 -79.4637,-0.4422 -79.4637,-0.9827 z"
+         style="fill:#dcfeff;fill-opacity:1;stroke:none;stroke-width:3.56211591;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="ccccsccscscsccccccccscccccccc"
+         inkscape:connector-curvature="0"
+         id="path960"
+         d="m 115.454,162.63117 -4.88948,3.25967 -4.56351,-12.06072 -15.320379,7.17124 c 0,0 1.95579,-7.27989 1.95579,-10.91984 0,-3.63995 -1.95579,-10.91984 -1.95579,-10.91984 l -26.72917,-3.58564 c 0,0 11.73476,-4.88947 15.32038,-7.66018 3.58562,-2.7707 6.19334,-8.96405 6.19334,-8.96405 0,0 -5.86738,-8.25779 -11.89774,-12.22371 -6.03036,-3.96591 -24.28443,-11.571766 -24.28443,-11.571766 0,0 14.01652,-1.086551 19.06899,-2.933689 5.05246,-1.847137 11.2458,-8.149137 11.2458,-8.149137 L 36.570361,47.565376 85.465181,46.587482 67.863051,-6.8708564 113.49821,22.140072 136.31579,-27.406678 150.65827,28.985345 195.6415,4.2119718 c 0,0 -11.40879,50.8506122 -9.77896,51.1765782 1.62983,0.325965 36.8341,4.889482 36.8341,4.889482 l -28.03303,20.209858 27.3811,14.342481 -21.51372,14.016509 11.40879,20.86179 -20.53583,3.58562 c 0,0 4.23755,13.36458 2.93369,13.69055 -1.30386,0.32596 -79.53557,17.60213 -79.53557,17.60213"
+         style="fill:#e7fcfd;fill-opacity:1;stroke:#000000;stroke-width:1.36500001;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="sssssssss"
+         inkscape:connector-curvature="0"
+         id="path914"
+         d="m 124.75182,39.012096 c -12.5887,3.423316 -25.718689,14.009144 -28.581059,26.737116 -4.31269,19.177015 -0.94892,35.712458 2.76591,53.013248 3.738149,17.40938 8.861849,35.1078 19.361359,49.78636 7.5772,10.5931 24.10146,15.43099 36.87878,12.90756 14.52215,-2.86802 21.5951,-10.00665 27.65909,-23.51022 7.17612,-15.98009 7.76383,-41.86568 4.14887,-59.006044 -3.84753,-18.2431 -9.10786,-34.258462 -21.20531,-47.942414 -9.28399,-10.501525 -27.50189,-15.663737 -41.02764,-11.985606 z"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1.16499996;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="csc"
+         inkscape:connector-curvature="0"
+         id="path918"
+         d="m 111.38326,65.316194 c 0,0 9.34144,0.954994 14.71875,-2.03009 7.86023,-4.363416 19.85511,-9.983478 19.85511,-9.983478"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1.06500006;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="csc"
+         inkscape:connector-curvature="0"
+         id="path920"
+         d="m 118.50624,59.748863 c 0,0 5.18406,-0.674564 7.66019,-1.466845 5.31836,-1.701706 11.89774,-5.704395 11.89774,-5.704395"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1.06500006;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="sssssssssss"
+         inkscape:connector-curvature="0"
+         id="path922"
+         d="m 98.622351,77.025032 c -0.008,-1.196409 1.626129,-1.933284 2.770699,-2.281758 7.54642,-2.297579 12.6077,-1.132238 27.21812,-5.215448 9.35171,-2.613548 17.8179,-8.259508 27.38109,-9.941946 3.10334,-0.545966 6.56045,-1.249788 9.453,0 1.16426,0.503045 2.55678,1.503438 2.60773,2.770706 0.0419,1.042758 -2.23907,2.552774 -3.25966,2.770707 -3.6816,0.78615 -5.16505,-0.129015 -8.31212,0.488947 -11.53681,2.265379 -20.88694,9.308235 -33.08549,11.734757 -10.18091,2.025176 -13.61432,2.839271 -21.51372,2.281758 -1.38801,-0.09796 -3.249779,-1.216295 -3.259649,-2.607723 z"
+         style="fill:#dcfeff;fill-opacity:1;stroke:#000000;stroke-width:0.96499997;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:open="true"
+         d="m 122.59134,79.588299 a 18.324144,17.863159 0 0 1 14.08517,15.937351 18.324144,17.863159 0 0 1 -11.24327,17.95561 18.324144,17.863159 0 0 1 -20.97894,-4.92795 18.324144,17.863159 0 0 1 -1.61987,-20.977155"
+         sodipodi:end="3.6960592"
+         sodipodi:start="4.942421"
+         sodipodi:ry="17.863159"
+         sodipodi:rx="18.324144"
+         sodipodi:cy="96.980927"
+         sodipodi:cx="118.41328"
+         sodipodi:type="arc"
+         id="path924"
+         style="fill:#fef9f3;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:0.96499997;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         style="fill:#fef9f3;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:0.96499997;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+         id="path926"
+         sodipodi:type="arc"
+         sodipodi:cx="160.1324"
+         sodipodi:cy="88.452705"
+         sodipodi:rx="18.324144"
+         sodipodi:ry="17.863159"
+         sodipodi:start="4.942421"
+         sodipodi:end="3.6960592"
+         d="m 164.31046,71.060078 a 18.324144,17.863159 0 0 1 14.08517,15.937351 18.324144,17.863159 0 0 1 -11.24327,17.955611 18.324144,17.863159 0 0 1 -20.97893,-4.92795 18.324144,17.863159 0 0 1 -1.61988,-20.977156"
+         sodipodi:open="true" />
+      <path
+         sodipodi:nodetypes="csc"
+         inkscape:connector-curvature="0"
+         id="path928"
+         d="m 101.24159,101.24504 c -0.28013,0.0467 7.63029,-4.024002 16.13447,-6.223293 8.59993,-2.224052 18.69767,-3.099713 18.43939,-2.996401"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:0.66500002;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         d="m 118.59808,95.030863 a 2.2002668,2.2002668 0 0 1 1.64901,2.606724 2.2002668,2.2002668 0 0 1 -2.5777,1.69402 2.2002668,2.2002668 0 0 1 -1.73852,-2.547901 2.2002668,2.2002668 0 0 1 2.51734,-1.782493"
+         sodipodi:open="true"
+         sodipodi:end="4.8729724"
+         sodipodi:start="4.9424234"
+         sodipodi:ry="2.2002668"
+         sodipodi:rx="2.2002668"
+         sodipodi:cy="97.173172"
+         sodipodi:cx="118.0964"
+         sodipodi:type="arc"
+         id="path932"
+         style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:0.66499996;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:0.66500002;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+         d="m 142.03874,91.103375 c -0.28013,0.04669 7.63029,-4.024003 16.13447,-6.223293 8.59993,-2.224052 18.69767,-3.099713 18.43939,-2.996402"
+         id="path930"
+         inkscape:connector-curvature="0"
+         sodipodi:nodetypes="csc" />
+      <path
+         style="fill:#000000;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:0.66499996;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+         id="path934"
+         sodipodi:type="arc"
+         sodipodi:cx="160.06105"
+         sodipodi:cy="86.432602"
+         sodipodi:rx="2.2002668"
+         sodipodi:ry="2.2002668"
+         sodipodi:start="4.9424234"
+         sodipodi:end="4.8729724"
+         sodipodi:open="true"
+         d="m 160.56274,84.290293 a 2.2002668,2.2002668 0 0 1 1.64901,2.606724 2.2002668,2.2002668 0 0 1 -2.5777,1.69402 2.2002668,2.2002668 0 0 1 -1.73852,-2.547901 2.2002668,2.2002668 0 0 1 2.51733,-1.782493" />
+      <path
+         sodipodi:nodetypes="csssc"
+         inkscape:connector-curvature="0"
+         id="path936"
+         d="m 137.41223,111.57737 c 0,0 1.0046,10.55052 3.58562,14.99441 1.19683,2.06065 2.83362,4.96398 5.21545,4.88948 2.53534,-0.0793 3.13622,-4.75607 3.91159,-7.17124 1.74266,-5.42816 -0.9779,-15.32038 -0.9779,-15.32038"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="csc"
+         inkscape:connector-curvature="0"
+         id="path938"
+         d="m 109.05324,122.98616 c 0,0 5.86649,1.42201 8.14913,1.62982 9.22518,0.83988 17.27618,-7.17123 17.27618,-7.17123"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:0.86500001;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         inkscape:connector-curvature="0"
+         id="path940"
+         d="M 115.24658,125.59388 Z"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+      <path
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1.56500006;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+         d="m 154.36244,114.18509 c 0,0 5.86649,1.42201 8.14913,1.62982 9.22518,0.83988 14.34249,-7.4972 14.34249,-7.4972"
+         id="path942"
+         inkscape:connector-curvature="0"
+         sodipodi:nodetypes="csc" />
+      <path
+         sodipodi:nodetypes="csc"
+         inkscape:connector-curvature="0"
+         id="path944"
+         d="m 123.13837,152.18386 c 0,0 12.92219,-7.31233 20.05284,-8.98921 11.07809,-2.60519 34.11287,-1.38295 34.11287,-1.38295"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1.16499996;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="csssscsscc"
+         inkscape:connector-curvature="0"
+         id="path946"
+         d="m 136.96791,146.88254 c 0,0 1.12131,2.97216 2.30493,3.91837 1.57524,1.25928 4.21793,0.54701 5.76231,1.84394 2.65807,2.23217 1.96292,7.27845 4.84034,9.21969 0.64009,0.43183 1.58744,0.51582 2.30492,0.23048 1.41709,-0.56358 3.22689,-2.5354 2.9964,-3.45739 -0.23049,-0.92197 -2.82196,-6.75585 -1.38295,-9.68068 0.89609,-1.82134 3.36238,-0.89461 4.14886,-2.76589 0.46214,-1.09957 0.23049,-3.68788 0.23049,-3.68788 l -0.46098,-1.15247"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         sodipodi:nodetypes="csc"
+         inkscape:connector-curvature="0"
+         id="path948"
+         d="m 118.52852,148.95695 c 0,0 -2.77747,3.65564 -1.84393,5.99282 1.0671,2.67156 6.45378,5.30132 6.45378,5.30132"
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:0.76499999;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <path
+         style="fill:#fef9f3;fill-opacity:1;stroke:#000000;stroke-width:0.76499999;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+         d="m 181.03996,134.66642 2.99639,7.83676 c 1.02741,2.68708 -3.91836,5.9928 -3.91836,5.9928"
+         id="path950"
+         inkscape:connector-curvature="0"
+         sodipodi:nodetypes="csc" />
+      <ellipse
+         transform="rotate(-18.187264)"
+         ry="1.7617624"
+         rx="1.1855314"
+         cy="197.01564"
+         cx="85.053978"
+         id="path954"
+         style="fill:#fef9f3;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:1;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+      <ellipse
+         style="fill:#fef9f3;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:1.0118165;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+         id="ellipse958"
+         cx="79.435829"
+         cy="197.86226"
+         rx="2.229259"
+         ry="2.4864995"
+         transform="matrix(0.97481462,-0.2230167,0.42669021,0.90439785,0,0)" />
+    </g>
+  </g>
+</svg>
+<p onClick="makeBigger()">Make It BIGGER Mortyyy!</p>
 
   <script>
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
 
-    function makeGreen() {
+    function makeBigger() {
       const p = document.querySelector('p');
       p.style.color = '#BADA55';
       p.style.fontSize = '50px';
