--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="column">
 				<div class="page"><a href="04-Array-Cardio/index.html" target="_blank" class="page__link"><img src="img/04-perview.png" alt="" class="page__perview"><div class="page__descr">Array Cardio</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="09-Must-Known-Dev-Tricks/index.html" target="_blank" class="page__link"><img src="img/09-perview.png" alt="" class="page__perview"> <div class="page__descr">Must Known Dev Tricks</div></a></div>
 				<div class="page"><a href="14-Reference-vs-Copy/index.html" target="_blank" class="page__link"><img src="img/14-perview.png" alt="" class="page__perview"> <div class="page__descr">Reference vs Copy</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
