--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="page"><a href="03-CSS-variables/index.html" target="_blank" class="page__link"><img src="img/03-perview.png" alt="" class="page__perview"><div class="page__descr">CSS variables and JS</div></a></div> 
 				<div class="page"><a href="08-Fun-HTML5-Canvas/index.html" target="_blank" class="page__link"><img src="img/08-perview.png" alt="" class="page__perview"> <div class="page__descr">Fun HTML5 Canvas</div></a></div>
 				<div class="page"><a href="13-Slide-in-on-Scroll/index.html" target="_blank" class="page__link"><img src="img/13-perview.png" alt="" class="page__perview"> <div class="page__descr">Slide in on Scroll</div></a></div>
-				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
+				<div class="page"><a href="18-Adding-up-times/index.html" target="_blank" class="page__link"><img src="img/18-perview.png" alt="" class="page__perview"> <div class="page__descr">Adding up times</div></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 				<div class="page"><a href="" class="page__link"><img src="" alt="" class="page__perview"></a></div>
 			</div>
